fixed sidebar border not centered and long

--- a/src/components/artist/artist.css
+++ b/src/components/artist/artist.css
@@ -1,3 +1,4 @@
 .artist-js {
-    
+    width: 100vw;
+    background-color: rgb(71, 61, 61);
 }
